# weather_cli

./: Cargo.toml  README.md  secret.json
src/: data.rs  main.rs  utils.rs
