[package]
name = "zero_weather_cli"
version = "2.0.0"
edition = "2021"
authors = ["kok-s0s <kok_s0s@163.com>"]
license = "MIT"
description = "A tool to get Weather info"
readme = "README.md"
homepage = "https://github.com/kok-s0s/weather_cli"
repository = "https://github.com/kok-s0s/weather_cli"
keywords = ["cli", "weather"]
categories = ["command-line-utilities"]


[dependencies]
dirs = "3.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
error-chain = "0.12.4"
tokio = { version = "0.2.3", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
